--- a/css/main.css
+++ b/css/main.css
@@ -160,11 +160,16 @@ body {
 .main aside {
 	color: black;
 	padding: 5px 5% 10px;
+	margin-bottom: 2em;
 }
 
 .footer-container footer {
 	color: black;
 	padding: 20px 0;
+}
+
+.footer-container footer #source {
+	float: right;
 }
 
 @media only screen and (min-width: 768px) {
