--- a/css/main.css
+++ b/css/main.css
@@ -153,6 +153,7 @@ body {
 
 .main {
 	padding: 30px 0;
+	padding-bottom: 4em;
 }
 
 .main article h1 {
@@ -163,6 +164,10 @@ body {
 	color: black;
 	padding: 5px 5% 10px;
 	margin-bottom: 2em;
+}
+
+.footer-container {
+	height: 4em;
 }
 
 .footer-container footer {
