--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,50 @@ body {
 	font: 16px/26px Helvetica, Helvetica Neue, Arial;
 }
 
+.profile {
+	max-width: 300px;
+	margin: auto;
+	text-align: center;
+}
+
+.profile .title {
+	color: grey;
+	font-size: 18px;
+}
+
+.profile img {
+	display: block;
+	margin: 0 auto;
+	margin-bottom: 1em;
+	width: 75%;
+	height: 75%;
+	border-radius: 50%;
+}
+
+.profile button {
+	border: none;
+	outline: 0;
+	display: inline-block;
+	padding: 8px;
+	color: white;
+	background-color: #000;
+	text-align: center;
+	cursor: pointer;
+	width: 100%;
+	font-size: 18px;
+}
+
+.profile a {
+	text-decoration: none;
+	font-size: 22px;
+	color: black;
+}
+
+.profile button:hover, a:hover {
+	opacity: 0.7;
+}
+
+.profile 
 .wrapper {
 	width: 90%;
 	margin: 0 5%;
@@ -220,8 +264,8 @@ body {
 	.header-container,
 	.main aside {
 		-webkit-box-shadow: 0 5px 10px #aaa;
-		   -moz-box-shadow: 0 5px 10px #aaa;
-				box-shadow: 0 5px 10px #aaa;
+		-moz-box-shadow: 0 5px 10px #aaa;
+		box-shadow: 0 5px 10px #aaa;
 	}
 
 	.title {
