--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,12 @@ body {
 	font-size: 18px;
 }
 
+.profile .subtitle2 {
+	color: black;
+	font-size: 15px;
+}
+
+
 .profile img {
 	display: block;
 	margin: 0 auto;
