--- a/css/main.css
+++ b/css/main.css
@@ -1,90 +1,90 @@
 html {
-	color: #222;
-	font-size: 1em;
-	line-height: 1.4;
+  color: #222;
+  font-size: 1em;
+  line-height: 1.4;
 }
 
 ::-moz-selection {
-	background: #b3d4fc;
-	text-shadow: none;
+  background: #b3d4fc;
+  text-shadow: none;
 }
 
 ::selection {
-	background: #b3d4fc;
-	text-shadow: none;
+  background: #b3d4fc;
+  text-shadow: none;
 }
 
 h1,
 h2,
 h3 {
-	color: #457397;
-	display: inline;
+  color: #457397;
+  display: inline;
 }
 
 #resume {
-	font-size: 9px;
+  font-size: 9px;
 }
 
 a {
-	text-decoration: none;
-	-o-transition:.5s;
-	-ms-transition:.5s;
-	-moz-transition:.5s;
-	-webkit-transition:.5s;
-	transition:.5s;
-	opacity: .5;
-	color: #0645AD;
-	cursor: pointer;
+  text-decoration: none;
+  -o-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  opacity: 0.5;
+  color: #0645ad;
+  cursor: pointer;
 }
 
 a:hover {
-	opacity: 1;
+  opacity: 1;
 }
 
 section p {
-	margin-top: .2em;
-	margin-bottom: 2em;
+  margin-top: 0.2em;
+  margin-bottom: 2em;
 }
 
 .box {
-	width: 5em;
-	text-align: center;
-	float: right;
-	border: 1px solid #B4B4B4;
-	padding: 1px 1px 1px 1px;
-	background-color: #E6E7E9;
-	margin-bottom: 4px;
-	margin-left: 4px;
-	padding-left: 2px;
-	padding-right: 2px;
-	border-left: 4px solid #8ABAE4
-	-o-transition:.5s;
-	-ms-transition:.5s;
-	-moz-transition:.5s;
-	-webkit-transition:.5s;
-	transition:.5s;
-	opacity: .6;
-	color: black;
+  width: 5em;
+  text-align: center;
+  float: right;
+  border: 1px solid #b4b4b4;
+  padding: 1px 1px 1px 1px;
+  background-color: #e6e7e9;
+  margin-bottom: 4px;
+  margin-left: 4px;
+  padding-left: 2px;
+  padding-right: 2px;
+  border-left: 4px solid #8abae4;
+  -o-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  opacity: 0.6;
+  color: black;
 }
 
 .box:hover {
-	opacity: 1;
+  opacity: 1;
 }
 
 .header hr {
-	display: block;
-	height: 1px;
-	border: 0;
-	border-top: 1px solid #ccc;
-	margin: 1em 0;
-	padding: 0;
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0;
 }
 
 aside hr {
-	display: block;
-	height: 1px;
-	border: 0;
-	border-top: 1px solid #ccc;
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
 }
 
 audio,
@@ -93,261 +93,261 @@ iframe,
 img,
 svg,
 video {
-	vertical-align: middle;
+  vertical-align: middle;
 }
 
 fieldset {
-	border: 0;
-	margin: 0;
-	padding: 0;
+  border: 0;
+  margin: 0;
+  padding: 0;
 }
 
 textarea {
-	resize: vertical;
+  resize: vertical;
 }
 
 .browserupgrade {
-	margin: 0.2em 0;
-	background: #ccc;
-	color: #000;
-	padding: 0.2em 0;
+  margin: 0.2em 0;
+  background: #ccc;
+  color: #000;
+  padding: 0.2em 0;
 }
 
 body {
-	font: 16px/26px Helvetica, Helvetica Neue, Arial;
+  font: 16px/26px Helvetica, Helvetica Neue, Arial;
 }
 
 .profile {
-	max-width: 300px;
-	margin: auto;
-	text-align: center;
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
 }
 
 .profile .subtitle {
-	color: black;
-	font-size: 18px;
+  color: black;
+  font-size: 18px;
 }
 
 .profile .subtitle .small {
-	color: black;
-	font-size: 15px;
+  color: black;
+  font-size: 15px;
 }
 
 .profile .subtitle2 {
-	color: black;
-	font-size: 15px;
+  color: black;
+  font-size: 15px;
 }
 
 
 .profile img {
-	display: block;
-	margin: 0 auto;
-	margin-bottom: 1em;
-	margin-top: 1em;
-	width: 75%;
-	height: 75%;
-	border-radius: 50%;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 1em;
+  margin-top: 1em;
+  width: 75%;
+  height: 75%;
+  border-radius: 50%;
 }
 
 .profile a {
-	text-decoration: none;
-	font-size: 22px;
-	color: black;
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
 }
 
 .profile i {
-	font-size: 1.1em;
-	padding: 0px 1px;
+  font-size: 1.1em;
+  padding: 0 1px;
 }
 
 .profile button:hover, a:hover {
-	opacity: 0.7;
+  opacity: 0.7;
 }
 
 .profile,
 .wrapper {
-	width: 90%;
-	margin: 0 auto;
+  width: 90%;
+  margin: 0 auto;
 }
 
 .header-container {
-	border-bottom: 20px solid #A9A9A9;
+  border-bottom: 20px solid #a9a9a9;
 }
 
 .footer-container,
 .main aside {
-	border-top: 20px solid #A9A9A9;
+  border-top: 20px solid #a9a9a9;
 }
 
 .header-container,
 .footer-container,
 .main aside {
-	background: #EFEFEF;
+  background: #efefef;
 }
 
 .main aside a {
-	text-decoration: none;
+  text-decoration: none;
 }
 
 .main aside #resume a {
-	border-bottom: none;
-	font-style: italic;
+  border-bottom: none;
+  font-style: italic;
 }
 
 .title {
-	color: white;
+  color: white;
 }
 
 
 .main {
-	padding: 30px 0;
-	padding-bottom: 4em;
+  padding: 30px 0;
+  padding-bottom: 4em;
 }
 
 .main article h1 {
-	font-size: 2em;
+  font-size: 2em;
 }
 
 .main aside {
-	clear: right;
-	color: black;
-	padding: 5px 5% 10px;
-	margin-bottom: 1em;
+  clear: right;
+  color: black;
+  padding: 5px 5% 10px;
+  margin-bottom: 1em;
 }
 
 .footer-container {
-	height: 4em;
+  height: 4em;
 }
 
 .footer-container footer {
-	color: black;
-	padding: 20px 0;
+  color: black;
+  padding: 20px 0;
 }
 
 .footer-container footer #source {
-	float: right;
+  float: right;
 }
 
 .blog {
-	width: 50%;
-	font-style: normal;
-	font-weight: 400;
-	font-size: 17px;
-	letter-spacing: -.003em;
-	margin: auto;
+  width: 50%;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  letter-spacing: -0.003em;
+  margin: auto;
 }
 
 .blog h1,
 .blog h3 {
-	font-weight: 600;
-	line-height: 1.04;
-	letter-spacing: -.015em;
-	margin: 20px 0;
-	word-wrap: break-word;
-	display: block;
+  font-weight: 600;
+  line-height: 1.04;
+  letter-spacing: -0.015em;
+  margin: 20px 0;
+  word-wrap: break-word;
+  display: block;
 }
 
 .blog p {
-	line-height: 140%;
+  line-height: 140%;
 }
 
 .blog img {
-	display: block;
-	margin: 0 auto;
+  display: block;
+  margin: 0 auto;
 }
 
 
 @media only screen and (max-width: 600px) {
-	aside {
-		border-radius: 3%;
-	}
+  aside {
+    border-radius: 3%;
+  }
 
-	.blog {
-		width: 80%;
-		margin: 0 auto;
-	}
+  .blog {
+    width: 80%;
+    margin: 0 auto;
+  }
 }
 
 @media only screen and (min-width: 768px) {
-	.header-container,
-	.main aside {
-		-webkit-box-shadow: 0 5px 10px #aaa;
-		-moz-box-shadow: 0 5px 10px #aaa;
-		box-shadow: 0 5px 10px #aaa;
-	}
+  .header-container,
+  .main aside {
+    -webkit-box-shadow: 0 5px 10px #aaa;
+    -moz-box-shadow: 0 5px 10px #aaa;
+    box-shadow: 0 5px 10px #aaa;
+  }
 
-	.title {
-		float: left;
-	}
+  .title {
+    float: left;
+  }
 
-	.main article {
-		position:  absolute;
-		float: left;
-		width: 40%;
-		right: 50%;
-	}
+  .main article {
+    position: absolute;
+    float: left;
+    width: 40%;
+    right: 50%;
+  }
 
-	.main aside {
-		float: right;
-		width: 28%;
-	}
+  .main aside {
+    float: right;
+    width: 28%;
+  }
 
 }
 
 @media only screen and (min-width: 1140px) {
-	.wrapper {
-		width: 1026px; /* 1140px - 10% for margins */
-		margin: 0 auto;
-	}
+  .wrapper {
+    width: 1026px; /* 1140px - 10% for margins */
+    margin: 0 auto;
+  }
 
-	.blog {
-		width: 50%;
-		margin: 0 auto;
-	}
+  .blog {
+    width: 50%;
+    margin: 0 auto;
+  }
 }
 
 .hidden {
-	display: none !important;
-	visibility: hidden;
+  display: none !important;
+  visibility: hidden;
 }
 
 .visuallyhidden {
-	border: 0;
-	clip: rect(0 0 0 0);
-	height: 1px;
-	margin: -1px;
-	overflow: hidden;
-	padding: 0;
-	position: absolute;
-	width: 1px;
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
 }
 
 .visuallyhidden.focusable:active,
 .visuallyhidden.focusable:focus {
-	clip: auto;
-	height: auto;
-	margin: 0;
-	overflow: visible;
-	position: static;
-	width: auto;
+  clip: auto;
+  height: auto;
+  margin: 0;
+  overflow: visible;
+  position: static;
+  width: auto;
 }
 
 .invisible {
-	visibility: hidden;
+  visibility: hidden;
 }
 
-.clearfix:before,
-.clearfix:after {
-	content: " ";
-	display: table;
+.clearfix::before,
+.clearfix::after {
+  content: " ";
+  display: table;
 }
 
-.clearfix:after {
-	clear: both;
+.clearfix::after {
+  clear: both;
 }
 
 .clearfix {
-	*zoom: 1;
+  *zoom: 1;
 }
 
 .grid-container {
@@ -364,86 +364,87 @@ body {
 **/
 
 @media print {
-	@page { size: auto;  margin: 0mm; }
+  @page { size: auto;  margin: 0; }
 	
-	section .after,
-	.profile .subtitle2,
-	.profile img,
-	.profile .ion-social-github::before,
-	.profile .ion-edit::before,
-	.profile .ion-pound,
-	.profile .ion-social-hackernews,
-	.footer-container {
-		display:  none;
-	}
+  .main .work hr,
+  section .after,
+  .profile .subtitle2,
+  .profile img,
+  .profile .ion-social-github::before,
+  .profile .ion-edit::before,
+  .profile .ion-pound,
+  .profile .ion-social-hackernews,
+  .footer-container {
+    display: none;
+  }
 
-	section h3 {
-		clear: left;
-	}
+  section h3 {
+    clear: left;
+  }
 
-	.main aside {
-		padding-bottom:  .2em;
-		border-radius: 15px;
-	}
+  .main aside {
+    padding-bottom: 0.2em;
+    border-radius: 15px;
+  }
 
-	.profile .subtitle {
-		font-size:  1em;
-		line-height:  .6em;
-	}
+  .profile .subtitle {
+    font-size: 1em;
+    line-height: 0.6em;
+  }
 
-	.profile .subtitle .small {
-		font-size:  1em;
-		line-height:  1.5em;
-	}
+  .profile .subtitle .small {
+    font-size: 1em;
+    line-height: 1.5em;
+  }
 
-	.profile {
-		max-width:  90%;
-	}
+  .profile {
+    max-width: 90%;
+  }
 
-	.profile p {
-		margin: 2px 2px -2px;
-		padding: 0;
-	}
+  .profile p {
+    margin: 2px 2px -2px;
+    padding: 0;
+  }
 
-	.profile i {
-		font-style:  normal;
-		font-family:  Helvetica, Helvetica Neue, Arial;
-		font-size:  .7em;
-	}
+  .profile i {
+    font-style: normal;
+    font-family: Helvetica, Helvetica Neue, Arial;
+    font-size: 0.7em;
+  }
 
-	.profile .site::after,
-	.profile .ion-social-github::after {
-		content:  attr(data-link) " /";
-	}
+  .profile .site::after,
+  .profile .ion-social-github::after {
+    content: attr(data-link) " /";
+  }
 
-	.profile .ion-edit::after {
-		content:  attr(data-link);
-	}
+  .profile .ion-edit::after {
+    content: attr(data-link);
+  }
 
-	aside p,
-	section p {
-		margin-bottom: .2em;
-		line-height:  1.2em;
-	}
+  aside p,
+  section p {
+    margin-bottom: 0.2em;
+    line-height: 1.2em;
+  }
 
-	section a {
-		color: inherit;
-		opacity:  1;
-	}
+  section a {
+    color: inherit;
+    opacity: 1;
+  }
 
-	.main .projects {
-		width: 45%;
-		display: inline-block;
-	}
+  .main .projects {
+    width: 45%;
+    display: inline-block;
+  }
 
-	.main .skills,
-	.main .work {
-		width: 45%;
-		float:  right;
-		padding: 10px;
-		border-radius: 15px;
-		border-top:  none;
-	}
+  .main .skills,
+  .main .work {
+    width: 45%;
+    float: right;
+    padding: 10px;
+    border-radius: 15px;
+    border-top: none;
+  }
 
 }
 
