--- a/css/main.css
+++ b/css/main.css
@@ -307,31 +307,6 @@ body {
   visibility: hidden;
 }
 
-.visuallyhidden {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px;
-}
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-  clip: auto;
-  height: auto;
-  margin: 0;
-  overflow: visible;
-  position: static;
-  width: auto;
-}
-
-.invisible {
-  visibility: hidden;
-}
-
 .clearfix::before,
 .clearfix::after {
   content: " ";
@@ -380,6 +355,7 @@ body {
   .profile .ion-edit::before,
   .profile .ion-pound,
   .profile .ion-social-hackernews,
+  .paper-link,
   .footer-container {
     display: none;
   }
@@ -426,7 +402,7 @@ body {
 
   .subtitle .hidden {
     display: inline !important;
-    visibility:  visible;
+    visibility: visible;
   }
 
   .profile .site::after,
