--- a/css/main.css
+++ b/css/main.css
@@ -177,6 +177,26 @@ body {
   opacity: 0.7;
 }
 
+button {
+  display: inline-block;
+  padding: 0.35em 1.2em;
+  border: 0.1em solid #FFFFFF;
+  margin: 0 0.3em 0.3em 0;
+  border-radius: 0.12em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-weight: 300;
+  color: #EFEFEF;
+  text-align: center;
+  transition: all 0.2s;
+  background-color: #457397;
+}
+
+button:hover{
+  color: white;
+  background-color: darkslateblue;
+}
+
 .profile,
 .wrapper {
   width: 90%;
