add footnote links and icon on hover

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,11 @@ html {
   opacity: .7;
 }
 
+.footnote:hover::after {
+  content: '\21A9';
+  padding-left: .3em;
+}
+
 ::-moz-selection {
   background: #b3d4fc;
   text-shadow: none;
