--- a/css/main.css
+++ b/css/main.css
@@ -3,16 +3,6 @@ html {
   line-height: 1.4;
 }
 
-.footnote {
-  color: black;
-  opacity: .7;
-}
-
-.footnote:hover::after {
-  content: '\21A9';
-  padding-left: .3em;
-}
-
 ::-moz-selection {
   background: #b3d4fc;
   text-shadow: none;
@@ -30,8 +20,12 @@ h3 {
   display: inline;
 }
 
-#resume {
-  font-size: 9px;
+h1 {
+  font-size:  2em;
+}
+
+h3 {
+    font-size: 1.4em;
 }
 
 a {
@@ -54,45 +48,101 @@ section {
   padding-top: 1em;
 }
 
+/** Animations **/
+.profile {
+  animation: .5s ease-in .5s 1 forwards fadeInFromNone;
+  opacity: 0;
+}
+
+hr {
+    animation: .5s ease-in .8s 1 forwards fadeInFromNone;
+    opacity: 0;
+}
+
+.projects h1:nth-child(1) { opacity: 0; animation: .5s ease-in 1.1s 1 forwards fadeInFromNone; }
+.projects section:nth-child(2) { opacity: 0; animation: .5s ease-in 1.4s 1 forwards fadeInFromNone; }
+.projects section:nth-child(3) { opacity: 0; animation: .5s ease-in 1.7s 1 forwards fadeInFromNone; }
+.projects section:nth-child(4) { opacity: 0; animation: .5s ease-in 2s 1 forwards fadeInFromNone; }
+.wontAnimate                   { opacity: 0; animation: .5s ease-in 2.3s 1 forwards fadeInFromNone;  }
+.projects section:nth-child(7) { opacity: 0; animation: .5s ease-in 2.6s 1 forwards fadeInFromNone; }
+.projects section:nth-child(8) { opacity: 0; animation: .5s ease-in 2.9s 1 forwards fadeInFromNone; }
+
+footer {
+  animation: .5s ease-in 4.1s 1 forwards fadeInFromNone;
+  opacity: 0;
+}
+
+
+@-webkit-keyframes fadeInFromNone {
+    0% {
+        display: none;
+        opacity: 0;
+    }
+
+    1% {
+        display: block;
+        opacity: 0;
+    }
+
+    100% {
+        display: block;
+        opacity: 1;
+    }
+}
+
+@-moz-keyframes fadeInFromNone {
+    0% {
+        display: none;
+        opacity: 0;
+    }
+
+    1% {
+        display: block;
+        opacity: 0;
+    }
+
+    100% {
+        display: block;
+        opacity: 1;
+    }
+}
+
+@-o-keyframes fadeInFromNone {
+    0% {
+        display: none;
+        opacity: 0;
+    }
+
+    1% {
+        display: block;
+        opacity: 0;
+    }
+
+    100% {
+        display: block;
+        opacity: 1;
+    }
+}
+
+@keyframes fadeInFromNone {
+    0% {
+        display: none;
+        opacity: 0;
+    }
+
+    1% {
+        display: block;
+        opacity: 0;
+    }
+
+    100% {
+        display: block;
+        opacity: 1;
+    }
+}
+
 section p {
   margin-top: 0.2em;
-}
-
-.box {
-  width: 5em;
-  text-align: center;
-  float: right;
-  border: 1px solid #b4b4b4;
-  padding: 1px 1px 1px 1px;
-  background-color: #e6e7e9;
-  margin-bottom: 4px;
-  margin-left: 4px;
-  padding-left: 2px;
-  padding-right: 2px;
-  border-left: 4px solid #8abae4;
-  -o-transition: 0.5s;
-  -ms-transition: 0.5s;
-  -moz-transition: 0.5s;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-  opacity: 0.6;
-  color: black;
-}
-
-.box:hover {
-  opacity: 1;
-}
-
-aside hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #ccc;
-}
-
-.main-container aside {
-  margin:  0 auto;
-  display:  block;
 }
 
 .main .header {
@@ -132,24 +182,24 @@ video {
   padding: 0.2em 0;
 }
 
-body {
-  font: 16px/26px Helvetica, Helvetica Neue, Arial, sans-serif;
-}
-
 .profile a {
   text-decoration: none;
-  font-size: 22px;
+  font-size: 28px;
   color: black;
+  padding-left: 5px;
+  padding-right:  5px;
 }
 
 .main aside a {
   text-decoration: none;
+  transition: transform 0.8s;
 }
 
 .profile {
   max-width: 300px;
   margin: auto;
   text-align: center;
+  transition: transform 0.4s;
 }
 
 .profile h1 {
@@ -169,7 +219,7 @@ body {
 
 .profile .subtitle2 {
   color: black;
-  font-size: 15px;
+  font-size: 15px
 }
 
 .profile i {
@@ -182,111 +232,11 @@ body {
   opacity: 0.7;
 }
 
-button {
-  display: inline-block;
-  padding: 0.35em 1.2em;
-  border: 0.1em solid #FFFFFF;
-  margin: 0 0.3em 0.3em 0;
-  border-radius: 0.12em;
-  box-sizing: border-box;
-  text-decoration: none;
-  font-weight: 300;
-  color: #EFEFEF;
-  text-align: center;
-  transition: all 0.2s;
-  background-color: #457397;
-}
-
-button:hover{
-  color: white;
-  background-color: darkslateblue;
-}
-
 .profile,
 .wrapper {
-  width: 90%;
+  width: 95%;
   margin: 0 auto;
 }
-
-.header-container {
-  border-bottom: 20px solid #a9a9a9;
-}
-
-.footer-container,
-.main aside {
-  border-top: 20px solid #a9a9a9;
-}
-
-.header-container,
-.footer-container,
-.main aside {
- background: #efefef;
-}
-
-.main aside #resume a {
-  border-bottom: none;
-  font-style: italic;
-}
-
-.title {
-  color: white;
-}
-
-.main {
-  padding: 30px 0;
-}
-
-.blog h1,
-.blog h3 {
-  font-weight: 600;
-  line-height: 1.04;
-  letter-spacing: -0.015em;
-  margin: 20px 0;
-  word-wrap: break-word;
-  display: block;
-}
-
-.main article h1 {
-  font-size: 2em;
-}
-
-.main aside {
-  clear: right;
-  color: black;
-  padding: 5px 5% 10px;
-  margin-bottom: 1em;
-}
-
-.footer-container {
-  height: 4em;
-}
-
-.footer-container footer {
-  color: black;
-  padding: 20px 0;
-}
-
-.footer-container footer #source {
-  float: right;
-}
-
-.blog {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 1.05em;
-  letter-spacing: -0.003em;
-  margin: auto;
-}
-
-.blog p {
-  line-height: 140%;
-}
-
-.blog img {
-  display: block;
-  margin: 0 auto;
-}
-
 
 @media only screen and (max-width: 600px) {
   aside {
@@ -304,13 +254,6 @@ button:hover{
 
   .title {
     float: left;
-  }
-
-  .main article {
-    position: absolute;
-    float: left;
-    width: 40%;
-    right: 50%;
   }
 
   .main aside {
@@ -364,121 +307,17 @@ button:hover{
   *zoom: 1;
 }
 
-.grid-container {
-  display: grid;
-  height: 100%;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto;
-  grid-template-areas: ". ." ". .";
-}
-
-/**
-* Printing
-**/
-
-@media print {
-  @page {
-    size: auto;
-    margin: 0;
+@media (prefers-color-scheme: dark) {
+  html {
+    color: hsl(210, 10%, 62%);
+    background: #121212;
   }
 
-  body {
-    filter: grayscale(100%);
-  }
-
-  .main {
-    padding: 20px 0;
-  }
-
-  .main .work hr,
-  section .after,
-  .profile .subtitle2,
-  .profile .ion-social-github::before,
-  .profile .ion-edit::before,
-  .profile .ion-pound,
-  .profile .ion-social-hackernews,
-  .paper-link,
-  .footer-container {
-    display: none;
-  }
-
-  section h3 {
-    clear: left;
-    color:  black;
-  }
-
-  .header {
-    color: black;
-  }
-
-  .main aside {
-    padding-bottom: 0.2em;
-    border-radius: 15px;
+  .profile a {
+    color: hsl(210, 10%, 72%);
   }
 
   .profile .subtitle {
-    font-size: 1em;
-    line-height: 0.6em;
-  }
-
-  .profile .subtitle .small {
-    font-size: 1em;
-    line-height: 1.5em;
-  }
-
-  .profile {
-    max-width: 90%;
-  }
-
-  aside p,
-  section p {
-    margin-bottom: 0.2em;
-    line-height: 1.2em;
-  }
-
-  .profile p {
-    margin: 2px 2px -2px;
-    padding: 0;
-  }
-
-  .profile i {
-    font-style: normal;
-    font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-    font-size: 0.7em;
-  }
-
-  .subtitle .hidden {
-    display: inline !important;
-    visibility: visible;
-  }
-
-  .profile .site::after,
-  .profile .ion-social-github::after {
-    content: attr(data-link) " /";
-  }
-
-  .profile .ion-edit::after {
-    content: attr(data-link);
-  }
-
-  section a {
-    color: inherit;
-    opacity: 1;
-  }
-
-  .main .projects {
-    width: 45%;
-    display: inline-block;
-  }
-
-  .main .extracurricular,
-  .main .skills,
-  .main .work {
-    width: 45%;
-    padding-left: 8px;
-    float: right;
-    border-radius: 15px;
-    border-top: none;
+    color: hsl(210, 10%, 72%);
   }
 }
-
