--- a/css/main.css
+++ b/css/main.css
@@ -59,17 +59,19 @@ hr {
     opacity: 0;
 }
 
-.projects h1:nth-child(1) { opacity: 0; animation: .5s ease-in 1.1s 1 forwards fadeInFromNone; }
+.projects h1:nth-child(1) { opacity: 0; animation: .5s ease-in 1.1s 1 forwards fadeInFromNone; width: 100%;}
 .projects section:nth-child(2) { opacity: 0; animation: .5s ease-in 1.4s 1 forwards fadeInFromNone; }
 .projects section:nth-child(3) { opacity: 0; animation: .5s ease-in 1.7s 1 forwards fadeInFromNone; }
 .projects section:nth-child(4) { opacity: 0; animation: .5s ease-in 2s 1 forwards fadeInFromNone; }
-.wontAnimate                   { opacity: 0; animation: .5s ease-in 2.3s 1 forwards fadeInFromNone;  }
-.projects section:nth-child(7) { opacity: 0; animation: .5s ease-in 2.6s 1 forwards fadeInFromNone; }
-.projects section:nth-child(8) { opacity: 0; animation: .5s ease-in 2.9s 1 forwards fadeInFromNone; }
+.wontAnimate                   { opacity: 0; animation: .5s ease-in 2.3s 1 forwards fadeInFromNone; }
+.projects section:nth-child(6) { opacity: 0; animation: .5s ease-in 2.6s 1 forwards fadeInFromNone; }
+.projects section:nth-child(7) { opacity: 0; animation: .5s ease-in 2.9s 1 forwards fadeInFromNone; }
+.projects section:nth-child(8) { opacity: 0; animation: .5s ease-in 3.2s 1 forwards fadeInFromNone; }
 
 footer {
   animation: .5s ease-in 4.1s 1 forwards fadeInFromNone;
   opacity: 0;
+  padding-bottom: 20px;
 }
 
 
@@ -242,6 +244,24 @@ video {
   aside {
     border-radius: 3%;
   }
+
+
+  /** Animations **/
+  .profile {
+    animation: none;
+  }
+
+  hr {
+      animation: none;
+  }
+
+  .main > h1:nth-child(1) { animation: none; }
+  .main > section:nth-child(2) { opacity: 0; animation: .5s ease-in 1.4s 1 forwards fadeInFromNone; }
+  .main >  section:nth-child(3) { opacity: 0; animation: .5s ease-in 1.7s 1 forwards fadeInFromNone; }
+  .main >  section:nth-child(4) { opacity: 0; animation: .5s ease-in 2s 1 forwards fadeInFromNone; }
+  .wontAnimate                   { opacity: 0; animation: .5s ease-in 2.3s 1 forwards fadeInFromNone; }
+  .main > section:nth-child(6) { opacity: 0; animation: .5s ease-in 2.6s 1 forwards fadeInFromNone; }
+  .main > section:nth-child(7) { opacity: 0; animation: .5s ease-in 2.9s 1 forwards fadeInFromNone; }
 }
 
 @media only screen and (min-width: 768px) {
