--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,8 @@
 html {
-  color: #222;
+  --color: #222;
+  --fgcolor: #457397;
+  --linkcolor: #0660ad;
+  color: var(--color);
   line-height: 1.4;
 }
 
@@ -16,7 +19,7 @@ html {
 h1,
 h2,
 h3 {
-  color: #457397;
+  color: var(--fgcolor);
   display: inline;
 }
 
@@ -25,7 +28,7 @@ h1 {
 }
 
 h3 {
-    font-size: 1.4em;
+  font-size: 1.4em;
 }
 
 a {
@@ -36,7 +39,7 @@ a {
   -webkit-transition: 0.5s;
   transition: 0.5s;
   opacity: 0.8;
-  color: #0660ad;
+  color: var(--linkcolor);
   cursor: pointer;
 }
 
@@ -55,8 +58,8 @@ section {
 }
 
 hr {
-    animation: .5s ease-in .8s 1 forwards fadeInFromNone;
-    opacity: 0;
+  animation: .5s ease-in .8s 1 forwards fadeInFromNone;
+  opacity: 0;
 }
 
 .projects h1:nth-child(1) { opacity: 0; animation: .5s ease-in 1.1s 1 forwards fadeInFromNone; width: 100%;}
@@ -76,71 +79,71 @@ footer {
 
 
 @-webkit-keyframes fadeInFromNone {
-    0% {
-        display: none;
-        opacity: 0;
-    }
+  0% {
+    display: none;
+    opacity: 0;
+  }
 
-    1% {
-        display: block;
-        opacity: 0;
-    }
+  1% {
+    display: block;
+    opacity: 0;
+  }
 
-    100% {
-        display: block;
-        opacity: 1;
-    }
+  100% {
+    display: block;
+    opacity: 1;
+  }
 }
 
 @-moz-keyframes fadeInFromNone {
-    0% {
-        display: none;
-        opacity: 0;
-    }
+  0% {
+    display: none;
+    opacity: 0;
+  }
 
-    1% {
-        display: block;
-        opacity: 0;
-    }
+  1% {
+    display: block;
+    opacity: 0;
+  }
 
-    100% {
-        display: block;
-        opacity: 1;
-    }
+  100% {
+    display: block;
+    opacity: 1;
+  }
 }
 
 @-o-keyframes fadeInFromNone {
-    0% {
-        display: none;
-        opacity: 0;
-    }
+  0% {
+    display: none;
+    opacity: 0;
+  }
 
-    1% {
-        display: block;
-        opacity: 0;
-    }
+  1% {
+    display: block;
+    opacity: 0;
+  }
 
-    100% {
-        display: block;
-        opacity: 1;
-    }
+  100% {
+    display: block;
+    opacity: 1;
+  }
 }
 
 @keyframes fadeInFromNone {
-    0% {
-        display: none;
-        opacity: 0;
-    }
+  0% {
+    display: none;
+    opacity: 0;
+  }
 
-    1% {
-        display: block;
-        opacity: 0;
-    }
+  1% {
+    display: block;
+    opacity: 0;
+  }
 
-    100% {
-        display: block;
-        opacity: 1;
-    }
+  100% {
+    display: block;
+    opacity: 1;
+  }
 }
 
 section p {
@@ -159,7 +162,7 @@ section p {
   display: block;
   height: 1px;
   border: 0;
-  border-top: 1px solid #ccc;
+  border-top: 1px solid var(--fgcolor);
   margin: 1em 0;
 }
 
@@ -173,15 +176,8 @@ video {
 }
 
 :target {
-   background-color: orange;
-   padding: 5px;
-}
-
-.browserupgrade {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+ background-color: orange;
+ padding: 5px;
 }
 
 .profile a {
@@ -249,10 +245,12 @@ video {
   /** Animations **/
   .profile {
     animation: none;
+    opacity: 1;
   }
 
   hr {
-      animation: none;
+    animation: none;
+    opacity: 1;
   }
 
   .main > h1:nth-child(1) { animation: none; }
@@ -330,7 +328,9 @@ video {
 @media (prefers-color-scheme: dark) {
   html {
     color: hsl(210, 10%, 62%);
-    background: #121212;
+    --dark: #121212;
+    --darkfg: #141414;
+    background: var(--dark);
   }
 
   .profile a {
